--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,8 +1,8 @@
-apiVersion: skaffold/v1beta7
+apiVersion: skaffold/v1beta9
 kind: Config
 build:
   artifacts:
-    - image: gcr.io/bookshelf-next-2019/bookshelf
+    - image: gcr.io/bookshelf-ta/bookshelf
 deploy:
   kubectl:
     manifests:
@@ -12,7 +12,7 @@ profiles:
   - name: dev
     build:
       artifacts:
-        - image: gcr.io/bookshelf-next-2019/bookshelf
+        - image: gcr.io/bookshelf-ta/bookshelf
           context: .
           sync:
             '**/*.js': .
@@ -24,12 +24,12 @@ profiles:
   - name: qa
     build:
       artifacts:
-        - image: gcr.io/bookshelf-next-2019/bookshelf
+        - image: gcr.io/bookshelf-ta/bookshelf
           context: .
           sync:
             '**/*.js': .
       googleCloudBuild:
-        projectId: bookshelf-next-2019
+        projectId: bookshelf-ta
     deploy:
       kubectl:
         manifests:
